crates/cyrus-core/tests/ui/fail/divide_by_zero.stderr
error[E0277]: the trait bound `Pos: DivOutput<cyrus_core::types::Zero>` is not satisfied
  --> tests/ui/fail/divide_by_zero.rs:14:21
   |
14 |     let _result = p / z;
   |                     ^ the trait `DivOutput<cyrus_core::types::Zero>` is not implemented for `Pos`
   |
   = help: the following other types implement trait `DivOutput<Rhs>`:
             `Pos` implements `DivOutput<GTEOne>`
             `Pos` implements `DivOutput<MinusOne>`
             `Pos` implements `DivOutput<One>`
             `Pos` implements `DivOutput<Pos>`
             `Pos` implements `DivOutput<Two>`
             `Pos` implements `DivOutput<cyrus_core::Neg>`
             `Pos` implements `DivOutput<cyrus_core::types::NonZero>`
   = note: required for `F64<Pos>` to implement `Div<F64<cyrus_core::types::Zero>>`
